<resources>
    <string name="app_name">Login</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="notregistered">Not Registered?</string>
    <string name="register">Register</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="phone">Phone</string>
    <string name="already_registered">Already Registered</string>
    <string name="name">Name</string>
    <string name="city">City</string>
    <string name="state">State</string>
</resources>
